Fix the `z-index` of the editor toolbar
See https://www.woltlab.com/community/thread/305318-der-editor-%C3%BCberlagert-das-ober-dropdown-men%C3%BC/

--- a/wcfsetup/install/files/style/ui/ckeditor.scss
+++ b/wcfsetup/install/files/style/ui/ckeditor.scss
@@ -363,6 +363,7 @@ html[data-color-scheme="light"] .ck-body-wrapper .ck.ck-balloon-panel {
 .ck.ck-sticky-panel__content,
 .ck.ck-balloon-panel {
 	--ck-z-modal: 90;
+	--ck-z-panel: 91;
 }
 
 html[data-color-scheme="dark"] {
